# ChangeLog for dev-perl/Mail-SpamAssassin
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-SpamAssassin/Attic/ChangeLog,v 1.35 2003/10/28 20:22:12 robbat2 Exp $

*Mail-SpamAssassin-2.60-r2 (28 Oct 2003)

  28 Oct 2003; Robin H. Johnson <robbat2@gentoo.org>
  Mail-SpamAssassin-2.60-r2.ebuild, files/spamd.init:
  improve spamd.init as per bug #22833 so it starts in the correct place, and
  bump revision with slight ebuild cleanup

  15 Oct 2003; Michael Cummings <mcummings@gentoo.org>
  Mail-SpamAssassin-2.60-r1.ebuild:
  Unmasking for x86, now stable

*Mail-SpamAssassin-2.60-r1 (26 Sep 2003)

  26 Sep 2003; <rac@gentoo.org> Mail-SpamAssassin-2.60-r1.ebuild:
  New ebuild that uses final 2.60. Much thanks to Malte S. Stretz in bug 29404
  and elsewhere.

*Mail-SpamAssassin-2.55-r2 (24 Sep 2003)

  24 Sep 2003; <rac@gentoo.org> Mail-SpamAssassin-2.55-r2.ebuild:
  Fix sandbox problem with rules files

  12 Sep 2003; Rajiv Aaron Manglani <rajiv@gentoo.org>
  Mail-SpamAssassin-2.60.ebuild:
  marked unstable as 2.60 is still changing upstream.

  08 Sep 2003; Michael Cummings <mcummings@gentoo.org> files/spamd.conf:
  Added note to spamd.conf for running as non root user - thanks to Joe
  <ptlame@core.com> in bug 24070 for pointing this out

  08 Sep 2003; Michael Cummings <mcummings@gentoo.org>
  Mail-SpamAssassin-2.60.ebuild:
  Put forward again upstream

  26 Aug 2003; Michael Cummings <mcummings@gentoo.org>
  Mail-SpamAssassin-2.60.ebuild:
  Pulled back upstream. Leaving the ebuild because 2.60 is forthcoming, but it
  has been pulled back for now.

*Mail-SpamAssassin-2.60 (22 Aug 2003)

  22 Aug 2003; Michael Cummings <mcummings@gentoo.org>
  Mail-SpamAssassin-2.60.ebuild:
  New version of spamassasin - bug 27037 by Pol <blenderman@wanadoo.be> brought
  this to our attention. New ebuild now has better support for ssl, removes