@@ -1,5 +1,13 @@
 MD5 15dc0d94ec82f40421ab547b644250fc Mail-SpamAssassin-2.55-r1.ebuild 1161
 MD5 84521b7fec60032d0004b8c45ecf34fc Mail-SpamAssassin-2.60-r2.ebuild 2203
+MD5 f40894c454e37dbd1de4b9d7c392d795 Mail-SpamAssassin-2.60.ebuild 2056
+MD5 6472e25049da5b2b77df3fe6b3b36eaa Mail-SpamAssassin-2.60-r1.ebuild 2200
+MD5 1668982e7bdc070ccaf5e771b03ed3cc Mail-SpamAssassin-2.44.ebuild 1343
+MD5 77e8f5eb7402ea3af60476734a0a7738 Mail-SpamAssassin-2.55-r2.ebuild 1202
+MD5 173979729e799b1396e69c8fb4ebe706 Mail-SpamAssassin-2.55.ebuild 1386
+MD5 84521b7fec60032d0004b8c45ecf34fc Mail-SpamAssassin-2.61.ebuild 2203
+MD5 a04e714e52ba96cb483a93223c33ed21 ChangeLog 6236
+MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 MD5 c698f2d5a26c38caf3c9e5593004a484 files/digest-Mail-SpamAssassin-2.55-r1 74
 MD5 c698f2d5a26c38caf3c9e5593004a484 files/digest-Mail-SpamAssassin-2.55-r2 74
 MD5 eb124c50f7f7ab2f7e12b8b5bb325e60 files/digest-Mail-SpamAssassin-2.60-r1 75
@@ -9,10 +17,4 @@ MD5 4bc47f7ee058bf11457cca8723fcac91 files/spamd.init 576
 MD5 1e2dfc5372ad24097799c70e896fe8c4 files/digest-Mail-SpamAssassin-2.44 74
 MD5 c698f2d5a26c38caf3c9e5593004a484 files/digest-Mail-SpamAssassin-2.55 74
 MD5 aa8db426d67f90c5c540c2c9429b7d78 files/digest-Mail-SpamAssassin-2.60 74
-MD5 f40894c454e37dbd1de4b9d7c392d795 Mail-SpamAssassin-2.60.ebuild 2056
-MD5 6472e25049da5b2b77df3fe6b3b36eaa Mail-SpamAssassin-2.60-r1.ebuild 2200
-MD5 1668982e7bdc070ccaf5e771b03ed3cc Mail-SpamAssassin-2.44.ebuild 1343
-MD5 77e8f5eb7402ea3af60476734a0a7738 Mail-SpamAssassin-2.55-r2.ebuild 1202
-MD5 173979729e799b1396e69c8fb4ebe706 Mail-SpamAssassin-2.55.ebuild 1386
-MD5 a04e714e52ba96cb483a93223c33ed21 ChangeLog 6236
-MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
+MD5 3d503ea1b4d7a317f59dccfa3c5c7382 files/digest-Mail-SpamAssassin-2.61 75
