@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Mail-SpamAssassin
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-SpamAssassin/Attic/ChangeLog,v 1.35 2003/10/28 20:22:12 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-SpamAssassin/Attic/ChangeLog,v 1.36 2003/12/18 19:45:00 rac Exp $
+
+*Mail-SpamAssassin-2.61 (18 Dec 2003)
+
+  18 Dec 2003; <rac@gentoo.org> Mail-SpamAssassin-2.55-r1.ebuild,
+  Mail-SpamAssassin-2.55-r2.ebuild, Mail-SpamAssassin-2.55.ebuild,
+  Mail-SpamAssassin-2.60.ebuild, Mail-SpamAssassin-2.61.ebuild:
+  Add 2.61, clean house. Address bug 35423
 
 *Mail-SpamAssassin-2.60-r2 (28 Oct 2003)
 
